fix app styles: removes horizontal scroll

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -36,6 +36,7 @@ body {
   position: absolute;
   width: 100%;
   height: 50px;
+  border-width: 0 0 1px;
   label {
     display: none;
   }
